      description.
    - Fix dependencies for locales package.
    - Include SONAME symlinks in libc6-dbg.
    - Remove vestigial gconv-modules Provides.
    - Install more files for libc6 and locales packages.
    - Correct section for zdump.8 man page.
    - Install ld.so.8 in the right directory (debhelper thinks that .so is a
      language extension).

  * Phil Blundell <pb@nexus.co.uk>

    - debian/patches/arm-ioperm.dpatch: Try again.

  * Jeff Bailey <jbailey@nisa.net>

    Welcome back HPPA, Thanks to Carlos O'Donell <carlos@baldric.uwo.ca>

    - debian/patches/50_glibc232-hppa-full-nptl-2003-10-22.dpatch: New.
    - debian/patches/50_glibc23-hppa-entry.dpatch: Remove.
    - debian/patches/glibc23-00-hppa-pthreads.dpatch: Remove.
    - debian/patches/glibc23-01-hppa-dl-machine.dpatch: Remove.
    - debian/patches/glibc23-07-hppa-atomicity.dpatch: Remove.
    - debian/patches/glibc23-hppa-compat.dpatch: Remove.
    - debian/patches/glibc23-hppa-malloc8.dpatch: Remove.

    - debian/patches/00list: Update.

    - debian/rules: Define NJOBS as 1.
    - debian/sysdeps/linux.mk: Define NJOBS based on number of processors
    - debian/rules.d/build.mk: Use -j $(NJOBS) during build.
    Based on patch from Ian Wienand <ianw@gelato.unsw.edu.au>

    - debian/debhelper.in/libc.install: Install pt_chown
    - debian/rules.d/debhelper.mk: Don't clobber SUID on pt_chown
    - debian/debhelper.in/glibc-doc.docs: Install DEB_SRCDIR/ChangeLog*
    - debian/rules.d/build.mk: Don't run testsuite if DEB_BUILD_OPTIONS
      contains nocheck

    - debian/sysdeps/gnu.mk: Define slibdir.
    - debian/rules.d/build.mk: Only set slibdir in configparms if its set.
    - debian/debhelper.in/glibc-doc.doc-base: New file.
    - debian/debhelper.in/glibc-doc.install: New file.
    - debian/debhelper.in/glibc-doc.links: New file.
    - debian/rules.d/build.mk: Generate HTML files.
    - debian/rules.d/debhelper.mk: Map LIBC to $(libc) in generated files.