@@ -1,1 +1,2 @@
 debian/tmp-libc/usr/share/info/libc.info*
+debian/tmp-libc/usr/share/info/libc-dir-add.info
