@@ -1,3 +1,2 @@
 DEB_SRCDIR/manual/*.html usr/share/doc/glibc-doc/html
-DEB_SRCDIR/linuxthreads/FAQ.html usr/share/doc/glibc-doc/linuxthreads
 
